type any message here

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Harrogate Interactive: a digital creative agency based in North Yorkshire, specialising in design, software development and education."
+      content="Harrogate Interactive: web design, software development, digital design and education, based in Harrogate, North Yorkshire."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Harrogate Interactive | Digital Creative Agency | Web Design | Software Development</title>
+    <title>Harrogate Interactive | Web design | Software Development</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
